--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@ layout: blog_layout
         &nbsp;&nbsp;
         <a href="{{post.url}}">
             <span class="glyphicon glyphicon-hand-right">  </span>
-            &nbsp;&nbsp; {{post.title}} &nbsp;&nbsp; 
+            &nbsp;&nbsp; {{post.title}} &nbsp;&nbsp; &nbsp;&nbsp;{{ post.date | date:"%b %d, %Y" }}&nbsp;&nbsp;
         </a>
     </section>
 {% endfor %}
